--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cycler==0.11.0
 fonttools==4.38.0
 kiwisolver==1.4.5
-matplotlib==3.5.3
+matplotlib
 numpy
 opencv-python==4.11.0.86
 packaging==24.0
